--- a/package.json
+++ b/package.json
@@ -2,15 +2,24 @@
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "0x0",
   "title": "0x0",
-  "description": "",
-  "icon": "command-icon.png",
+  "description": "Upload files to https://0x0.st.",
+  "icon": "0x0.png",
   "author": "pseudobun",
+  "contributors": [
+    "pernielsentikaer",
+    "jatindotdev"
+  ],
   "license": "MIT",
+  "categories": [
+    "Applications",
+    "Media"
+  ],
   "commands": [
     {
       "name": "index",
-      "title": "Upload to 0x0",
-      "description": "",
+      "title": "Upload File",
+      "subtitle": "0x0",
+      "description": "Select a file and upload it to 0x0.st.",
       "mode": "view"
     }
   ],
